# xeus-haskell-jupyter

./: .jupyterlite.doit.db  CMakeLists.txt  README.md  XHaskellDisplayDemo.ipynb  environment-wasm-build.yml  out.comb  pixi.toml
.github/workflows/: deploy-github-pages.yml  main.yml
cmake/: MicroHs.cmake
docs/: REPL.md  TODO.md
example/Example/: Hello.hs
include/xeus-haskell/: mhs_repl.hpp
share/jupyter/kernels/xhaskell/: kernel.json.in
src/: OutputCapturer.cpp  OutputCapturer.hpp  ProtocolParser.cpp  ProtocolParser.hpp  Repl.hs  mhs_repl.cpp  post.js  pre.js  xinterpreter.cpp
src/Repl/: Analysis.hs  Compiler.hs  Context.hs  Error.hs  Executor.hs  Utils.hs
src/XHaskell/: Display.hs
tasks/: bash.sh  build.sh  ctest.sh
test/: test_mhs_repl.cpp  test_xhaskell_kernel_simple.py  test_xhaskell_kernel_stage2.py
